set(EXECUTABLE_TARGETS "")

set(CONTEST_NAME abc071)

set(PROBLEMS "")
#list(APPEND PROBLEMS a)
list(APPEND PROBLEMS b)
#list(APPEND PROBLEMS c)
#list(APPEND PROBLEMS d)
#list(APPEND PROBLEMS e)
#list(APPEND PROBLEMS f)

foreach(PROBLEM IN LISTS PROBLEMS)
  add_executable(${CONTEST_NAME}${PROBLEM} ${PROBLEM}.cc)
  list(APPEND EXECUTABLE_TARGETS ${CONTEST_NAME}${PROBLEM})
endforeach()

foreach(EXECUTABLE_TARGET IN LISTS EXECUTABLE_TARGETS)
  target_link_libraries(${EXECUTABLE_TARGET} PRIVATE ${ATCODER_LINK_LIBRARIES})
  target_compile_options(${EXECUTABLE_TARGET} PRIVATE
    $<$<CXX_COMPILER_ID:Clang>:${ATCODER_CLANG_WARNING_FLAGS}>
    $<$<CXX_COMPILER_ID:GCC>:  ${ATCODER_GCC_WARNING_FLAGS}>
    $<$<CXX_COMPILER_ID:MSVC>: ${ATCODER_MSVC_WARNING_FLAGS}>)
  target_compile_features(${EXECUTABLE_TARGET} PRIVATE ${ATCODER_COMPILE_FEATURES})
  target_compile_definitions(${EXECUTABLE_TARGET} PRIVATE
    $<$<CXX_COMPILER_ID:Clang>:${ATCODER_CLANG_DEFINITIONS}>
    $<$<CXX_COMPILER_ID:GCC>:  ${ATCODER_GCC_DEFINITIONS}>
    $<$<CXX_COMPILER_ID:MSVC>: ${ATCODER_MSVC_DEFINITIONS}>)
set_target_properties(${EXECUTABLE_TARGET} PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${ATCODER_BIN_DIR})
endforeach()
