set(EXECUTABLE_TARGETS "")

add_executable(abc131d d.cc)
list(APPEND EXECUTABLE_TARGETS abc131d)

foreach(EXECUTABLE_TARGET IN LISTS EXECUTABLE_TARGETS)
  target_link_libraries(${EXECUTABLE_TARGET} PRIVATE ${ATCODER_LINK_LIBRARIES})
  target_compile_options(${EXECUTABLE_TARGET} PRIVATE
    $<$<CXX_COMPILER_ID:Clang>:${ATCODER_CLANG_WARNING_FLAGS}>
    $<$<CXX_COMPILER_ID:GCC>:  ${ATCODER_GCC_WARNING_FLAGS}>
    $<$<CXX_COMPILER_ID:MSVC>: ${ATCODER_MSVC_WARNING_FLAGS}>)
  target_compile_features(${EXECUTABLE_TARGET} PRIVATE ${ATCODER_COMPILE_FEATURES})
  target_compile_definitions(${EXECUTABLE_TARGET} PRIVATE
    $<$<CXX_COMPILER_ID:Clang>:${ATCODER_CLANG_DEFINITIONS}>
    $<$<CXX_COMPILER_ID:GCC>:  ${ATCODER_GCC_DEFINITIONS}>
    $<$<CXX_COMPILER_ID:MSVC>: ${ATCODER_MSVC_DEFINITIONS}>)
endforeach()
